#5: Add function load_saves_mudrunner
This is part of restoring archived mudrunner savegames.

Signed-off-by: Thomas Vauti-Rienößl <43434564+ThomCoder@users.noreply.github.com>

--- a/templates/base.hbs
+++ b/templates/base.hbs
@@ -228,6 +228,23 @@
             }
         }
 
+        function load_saves_mudrunner(uuid) {
+            var http = new XMLHttpRequest();
+            http.open('GET', '/mud-runner/profile');
+            http.send();
+            http.onreadystatechange = function () {
+                if (http.readyState == 4) {
+                    if (this.status == 200) {
+                        document.getElementById('saves').innerHTML = http.responseText;
+                        //selected_snowrunner_profile = uuid;
+                        w3.show("blabla...");
+                    } else {
+                        console.warn(http.responseText);
+                    }
+                }
+            }
+        }
+
         function backup_snowrunner() {
             var profile = document.getElementById('snowrunner-save-modal').getAttribute('profile');
             var name = document.getElementById('snowrunner-save-name').value;
