#5: Remove unused parameter
Signed-off-by: Thomas Vauti-Rienößl <43434564+ThomCoder@users.noreply.github.com>

--- a/templates/base.hbs
+++ b/templates/base.hbs
@@ -228,7 +228,7 @@
             }
         }
 
-        function load_saves_mudrunner(uuid) {
+        function load_saves_mudrunner() {
             var http = new XMLHttpRequest();
             http.open('GET', '/mud-runner/profile');
             http.send();
