#5: Add button to load archived saves
Signed-off-by: Thomas Vauti-Rienößl <43434564+ThomCoder@users.noreply.github.com>

--- a/templates/mudrunner.hbs
+++ b/templates/mudrunner.hbs
@@ -1,3 +1,7 @@
+<br />
+<button class="w3-button w3-theme"
+    onclick="load_saves_mudrunner()">Load archived Mudrunner saves</button>
+
 <div class="w3-panel">
     <h2>MudRunner Available Saves</h2>
     <div class="w3-container">
